...
          </HStack>
        )}
      </Section>

      <Section>
        <SwiftUIButton
          testID="space-settings"
          onPress={onOpenSpaceSettings}
          modifiers={[buttonStyle('plain')]}
        >
          <HStack
            spacing={16}
            alignment="center"
...
